--- a/api/MarketTecBotApiNet5.Test/MarketTecBotApiNet5.Test.csproj
+++ b/api/MarketTecBotApiNet5.Test/MarketTecBotApiNet5.Test.csproj
@@ -4,7 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+    <ProjectGuid>CFBF6089-F483-4BB1-8CD6-D4A252FEA57E</ProjectGuid>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <Compile Remove="TestUtils\**" />
+    <EmbeddedResource Remove="TestUtils\**" />
+    <None Remove="TestUtils\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
@@ -18,10 +25,20 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="3.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MarketTecBotApiNet5\MarketTecBotApiNet5.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
